[package]
name = "monte_carlo"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"]}
log = "0.4"
obj-rs = "0.7"
pollster = "0.2"
rand = "0.8.5"
winit = "0.26"
wgpu = "0.12"
